--- a/without-sip/with-web-proxy/web.conf/default.ssl.conf.erb
+++ b/without-sip/with-web-proxy/web.conf/default.ssl.conf.erb
@@ -7,6 +7,10 @@ upstream <%= domain.upstream_backend_name %> {
 <% end %>
 
 server {
+# BAS-IP LINK CHANGED: listen 80 port as default virtual server, because we need to give access by ip address
+    listen 80 default_server;
+# BAS-IP LINK CHANGED: -
+
     listen 443 ssl http2;
     <% if ENV['LISTEN_IPV6'] && ENV['LISTEN_IPV6'].downcase == 'true' %>
     listen [::]:443 ssl http2;
